Add stack view to cell

--- a/simplepin/Base.lproj/Main.storyboard
+++ b/simplepin/Base.lproj/Main.storyboard
@@ -22,38 +22,30 @@
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="71.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yE0-JA-BAm">
-                                            <rect key="frame" x="12" y="12" width="576" height="19.5"/>
-                                            <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Detail" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f5h-9t-no5">
-                                            <rect key="frame" x="12" y="33.5" width="576" height="26.5"/>
-                                            <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
-                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
+                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="Lpq-g1-8hG">
+                                            <rect key="frame" x="16" y="16" width="568" height="40"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yE0-JA-BAm">
+                                                    <rect key="frame" x="0.0" y="0.0" width="568" height="20"/>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" misplaced="YES" text="Detail" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f5h-9t-no5">
+                                                    <rect key="frame" x="0.0" y="24" width="568" height="17"/>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </stackView>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="f5h-9t-no5" firstAttribute="leading" secondItem="X2J-t1-qt7" secondAttribute="leadingMargin" constant="4" id="5kb-Bf-iTL"/>
-                                        <constraint firstItem="yE0-JA-BAm" firstAttribute="top" secondItem="f5h-9t-no5" secondAttribute="bottom" id="KvT-Dw-1lT"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="f5h-9t-no5" secondAttribute="bottom" constant="4" id="Lk0-GG-9oS"/>
-                                        <constraint firstItem="yE0-JA-BAm" firstAttribute="leading" secondItem="X2J-t1-qt7" secondAttribute="leadingMargin" constant="4" id="V8G-ZO-Glf"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="yE0-JA-BAm" secondAttribute="bottom" constant="4" id="XLO-wx-WyJ"/>
-                                        <constraint firstItem="yE0-JA-BAm" firstAttribute="top" secondItem="X2J-t1-qt7" secondAttribute="topMargin" constant="4" id="Z89-xn-V3P"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="f5h-9t-no5" secondAttribute="trailing" constant="4" id="dDS-IA-z8G"/>
-                                        <constraint firstItem="f5h-9t-no5" firstAttribute="top" secondItem="X2J-t1-qt7" secondAttribute="topMargin" id="jSb-UE-x2R"/>
-                                        <constraint firstItem="f5h-9t-no5" firstAttribute="top" secondItem="yE0-JA-BAm" secondAttribute="bottom" constant="2" id="lUl-Gf-Q9h"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="yE0-JA-BAm" secondAttribute="trailing" constant="4" id="yjz-Kx-M3P"/>
+                                        <constraint firstItem="Lpq-g1-8hG" firstAttribute="leading" secondItem="X2J-t1-qt7" secondAttribute="leadingMargin" constant="8" id="0i9-Yy-7oM"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="Lpq-g1-8hG" secondAttribute="bottom" constant="8" id="MUD-WQ-ScW"/>
+                                        <constraint firstItem="Lpq-g1-8hG" firstAttribute="top" secondItem="X2J-t1-qt7" secondAttribute="topMargin" constant="8" id="iwB-lf-jca"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="Lpq-g1-8hG" secondAttribute="trailing" constant="8" id="pRh-Eg-JRD"/>
                                     </constraints>
-                                    <variation key="default">
-                                        <mask key="constraints">
-                                            <exclude reference="KvT-Dw-1lT"/>
-                                            <exclude reference="XLO-wx-WyJ"/>
-                                            <exclude reference="jSb-UE-x2R"/>
-                                        </mask>
-                                    </variation>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="detailLabel" destination="f5h-9t-no5" id="2i2-5J-BfT"/>
